--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,13 @@
 .nav {
     grid-area: n;
     background-color: blanchedalmond;
+    padding: 20px;
 }
 
-.item {
+.item a {
     color: white;
+    text-decoration: none;
+}
+.item a.activeLink {
+    color: gold;
 }
