--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,4 @@
 .content {
     grid-area: c;
-    background-color: beige;
-}
-
-.content img {
-    width: 100%;
-    height: 200px;
+    background-color: lightyellow;
 }
